dz3/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: otus-roma-dz
  name: api-service
spec:
  type: ClusterIP
  selector:
    app: node
  ports:
  - name: http
    port: 8000
    targetPort: 8000
    protocol: TCP
